Fix title spacing

--- a/css/psdi-common.css
+++ b/css/psdi-common.css
@@ -549,7 +549,7 @@ a svg {
 .navbar__title h5 {
   display: flex;
   color  : var(--ifm-heading-color);
-  margin : 0 0 0.5rem 0.5rem;
+  margin : 0 0 0.5rem 1.5rem;
 }
 
 .navbar__logo img {
